--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^4.12.0",
     "react-scroll": "^1.9.3",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
