--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.2",
+    "@react-three/drei": "^10.7.3",
     "@react-three/fiber": "^9.3.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
@@ -18,7 +18,8 @@
     "react-icons": "^4.12.0",
     "react-scroll": "^1.9.3",
     "react-transition-group": "^4.4.5",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
